Разметка главной страницы

--- a/index.html
+++ b/index.html
@@ -5,8 +5,182 @@
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
+  	<header class="main-header">
+  		<nav class="main-navigation">
+  			<a class="logo">
+  				<img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип магазина">
+  			</a>
+  			<ul class="site-navigation">
+  				<li class="site-navigation-catalog">Каталог</li>
+  				<li><a href="price.html">Доставка и оплата</a></li>
+  				<li><a href="info.html">О Компании</a></li>
+  			</ul>
+  			<ul class="user-navigation">
+  				<li class="login">Вход</li>
+  				<li class="cart">Пусто</li>
+  			</ul>
+  		</nav>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+  		<div class="main-header-info">
+  			<span class="info-workinghour">С 10 до 20, ежедневно</span><br>
+  		    <span class="info-phone">8 812 450-25-25</span>
+  		</div>
+  	</header>
 
+  	<main class="container">
+  		<h1 class="visually-hidden">Содержание</h1>
+  		<section class="slider">
+  			<h2 class="visually-hidden">Слайдер</h2>
+  			<ul class="slider-list">
+  				<li>
+  					<p class="slider-description"><b>Крем-брюле и пломбир с малиновым джемом</b></p>
+  					<a href="catalog.html">Давайте оба!</a>
+  				</li>
+  				<li>
+  					<p class="slider-description"><b>Шоколадный пломбир и лимонный сорбет</b></p>
+  					<a href="catalog.html">Давайте оба!</a>
+  				</li>
+  				<li>
+  					<p class="slider-description"><b>Пломбир с помадкой и клубничный щербет</b></p>
+  					<a href="catalog.html">Давайте оба!</a>
+  				</li>
+  			</ul>
+  		</section>
+
+  		<section class="stock">
+  			<h2 class="visually-hidden">Акции</h2>
+  			<div class="stock-raspberry">
+  				<h3>Малинка даром!</h3>
+  				<p>При покупке 2 кг любого фруктового мороженного, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+  				<a href="catalog.html">Хочу варенье!</a>
+  			</div>
+  			<div class="stock-chocolate">
+  				<h3>Шоколадки даром!</h3>
+  				<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей школадной присыпки совершенно бесплатно.</p>
+  				<a href="catalog.html">Хочу шоколадки!</a>
+  			</div>
+  		</section>
+
+  		<section class="items">
+  			<h2 class="visually-hidden">Товары</h2>
+  			<ul class="items-list">
+  				<li>
+  					<a href="catalog.html">
+  						<img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+  						<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+  					</a>
+  					<p class="price"><span class="price-number">310Р</span>/кг</p>
+  				</li>
+  				<li>
+  					<a href="catalog.html">
+  						<img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+  						<p>Сливочно-кофейное с кусочками шоколада</p>
+  					</a>
+  					<p class="price"><span class="price-number">380Р</span>/кг</p>
+  				</li>
+  				<li>
+  					<a href="catalog.html">
+  						<img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+  						<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
+  					</a>
+  					<p class="price"><span class="price-number">355Р</span>/кг</p>
+  				</li>
+  				<li>
+  					<a href="catalog.html">
+  						<img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+  						<p>Сливочное крем-брюле с карамельной подливкой</p>
+  					</a>
+  					<p class="price"><span class="price-number">415Р</span>/кг</p>
+  				</li>
+  			</ul>
+  		</section>
+
+  		<section class="about-us">
+  			<h2 class="about-us-title">Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+  			<ul class="about-us-elements">
+  				<li>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+  				<li>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
+  				<li>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
+  				<li>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+  			</ul>
+  		</section>
+
+  		<section class="news">
+  			<h2 class="news-title">Новое в нашем блоге</h2>
+  			<a href="blog.html"><p class="news-text">10 способов сервировки фруктовых щербетов к столу</p></a>
+  		</section>
+
+  		<section class="dispatch">
+  			<h2 class="visually-hidden">Рассылка</h2>
+  			<p class="dispatch-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+  			<!-- Форма рассылки -->
+  		</section>
+
+  		<section class="map">
+  			<h2 class="visually-hidden">Карта и адрес</h2>
+  			<!-- Карта -->
+  			<div class="map-adress">
+  				<p>
+  					Адреса главного офиса и офлайн-магазина:<br>
+  					<span class="bold">ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
+  				</p>
+  				<p>
+  					Для заказов по телефону:<br>
+  					<span class="bold">8 812 450-25-25</span><br>
+  					(с 10 до 20 ежедневно)
+  				</p>
+  				<span class="feedback-open">Форма обратной связи</span>
+  			</div>
+  		</section>
+  	</main>
+
+  	<footer class="main-footer">
+  		<div class="footer-social">
+  			<h2 class="visually-hidden">Социальные сети</h2>
+  			<ul>
+  				<li><a class="social-button" href="#"><img src="http://placehold.it/50x50" width="50" height="50" alt="Twitter">Twitter</a></li>
+  				<li><a class="social-button" href="#"><img src="http://placehold.it/50x50" width="50" height="50" alt="Instagram">Instagram</a></li>
+  				<li><a class="social-button" href="#"><img src="http://placehold.it/50x50" width="50" height="50" alt="Facebook">Facebook</a></li>
+  				<li><a class="social-button" href="#"><img src="http://placehold.it/50x50" width="50" height="50" alt="VK">VK</a></li>
+  			</ul>
+  		</div>
+
+  		<ul class="footer-links">
+  			<li><a href="#">Для поставщиков</a></li>
+  			<li><a href="#">О производстве</a></li>
+  			<li><a href="#">Наши документы</a></li>
+  			<li><a href="#">Экологические стандарты</a></li>
+  		</ul>
+
+  		<div class="footer-copyright">
+  			<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="http://placehold.it/150x100" width="150" height="100" alt="HTMLAcademy"></a>
+  			<p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
+  		</div>
+  	</footer>
+
+  	<section class="modal modal-menu">
+  		<h2 class="visually-hidden">Меню</h2>
+  		<p>Новинки</p>
+  		<ul>
+  			<li><a href="catalog.html">Сливочное</a></li>
+  			<li><a href="catalog.html">Щербеты</a></li>
+  			<li><a href="catalog.html">Фруктовый лед</a></li>
+  			<li><a href="catalog.html">Мелорин</a></li>
+  		</ul>
+  	</section>
+
+  	<section class="modal modal-login">
+  		<!-- Форма регистрации -->
+  	</section>
+
+  	<section class="modal modal-search">
+  		<!-- Форма поиска-->
+  	</section>
+
+  	<section class="modal modal-feedback">
+  		<p><b>Мы обязательно вам ответим!</b></p>
+  		<!-- Форма обратной связи -->
+  		<span class="modal-close">X</span>
+  	</section>
   </body>
 </html>
