Разметка внутренней страницы, исправления на главной странице

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <body>
   	<header class="main-header">
   		<nav class="main-navigation">
-  			<a class="logo">
-  				<img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип магазина">
-  			</a>
+  			<img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип магазина">
   			<ul class="site-navigation">
   				<li class="site-navigation-catalog">Каталог</li>
   				<li><a href="price.html">Доставка и оплата</a></li>
@@ -65,28 +63,28 @@
   			<h2 class="visually-hidden">Товары</h2>
   			<ul class="items-list">
   				<li>
-  					<a href="catalog.html">
+  					<a href="catalog-item.html">
   						<img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
   						<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
   					</a>
   					<p class="price"><span class="price-number">310Р</span>/кг</p>
   				</li>
   				<li>
-  					<a href="catalog.html">
+  					<a href="catalog-item.html">
   						<img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
   						<p>Сливочно-кофейное с кусочками шоколада</p>
   					</a>
   					<p class="price"><span class="price-number">380Р</span>/кг</p>
   				</li>
   				<li>
-  					<a href="catalog.html">
+  					<a href="catalog-item.html">
   						<img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
   						<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
   					</a>
   					<p class="price"><span class="price-number">355Р</span>/кг</p>
   				</li>
   				<li>
-  					<a href="catalog.html">
+  					<a href="catalog-item.html">
   						<img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
   						<p>Сливочное крем-брюле с карамельной подливкой</p>
   					</a>
