--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,16 @@
           <img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип магазина">
         </a>
         <ul class="site-navigation">
-          <li class="site-navigation-catalog">Каталог</li>
+          <li class="site-navigation-catalog">
+            Каталог
+            <ul class="menu">
+              <li class="menu-title">Новинки</li>
+              <li><a href="catalog.html">Сливочное</a></li>
+              <li><a href="catalog.html">Щербеты</a></li>
+              <li><a href="catalog.html">Фруктовый лед</a></li>
+              <li><a href="catalog.html">Мелорин</a></li>
+            </ul>
+          </li>
           <li><a href="price.html">Доставка и оплата</a></li>
           <li><a href="info.html">О Компании</a></li>
         </ul>
@@ -27,98 +36,99 @@
       </div>
     </header>
 
-    <main class="content">
-      <h1 class="visually-hidden">Каталог</h1>
+    <main class="container">
+      
       <ul class="breadcrumbs">
         <li><a href="index.html">Главная</a></li>
         <li><a href="catalog.html">Каталог</a></li>
         <li class="breadcrumbs-current">Сливочное</li>
       </ul>
 
-      <h2>Сливочное мороженое</h2>
+      <h1>Сливочное мороженое</h1>
+
       <section class="filter">
         <!-- Фильтр -->
       </section>
 
-      <section class="items">
+      <section class="catalog">
         <h2 class="visually-hidden">Товары</h2>
-        <ul class="items-list">
-          <li>
+        <ul class="catalog-list">
+          <li class="catalog-item">
             <a href="catalog-item.html">
               <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
               <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
             </a>
-            <p class="price"><span class="price-number">310Р</span>/кг</p>
+            <p class="price">310Р<span class="price-weight">/кг</span></p>
           </li>
-          <li>
+          <li class="catalog-item">
             <a href="catalog-item.html">
               <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
               <p>Сливочно-кофейное с кусочками шоколада</p>
             </a>
-            <p class="price"><span class="price-number">380Р</span>/кг</p>
+            <p class="price">380Р<span class="price-weight">/кг</span></p>
           </li>
-          <li>
+          <li class="catalog-item">
             <a href="catalog-item.html">
               <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
               <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
             </a>
-            <p class="price"><span class="price-number">355Р</span>/кг</p>
+            <p class="price">355Р<span class="price-weight">/кг</span></p>
           </li>
-          <li>
+          <li class="catalog-item">
             <a href="catalog-item.html">
               <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
               <p>Сливочное крем-брюле с карамельной подливкой</p>
             </a>
-            <p class="price"><span class="price-number">415Р</span>/кг</p>
+            <p class="price">415Р<span class="price-weight">/кг</span></p>
           </li>
-          <li>
+          <li class="catalog-item">
             <a href="catalog-item.html">
               <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
               <p>Сливочное с брусничным джемом</p>
             </a>
-            <p class="price"><span class="price-number">325Р</span>/кг</p>
+            <p class="price">325Р<span class="price-weight">/кг</span></p>
           </li>
-          <li>
+          <li class="catalog-item">
             <a href="catalog-item.html">
               <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
               <p>Сливочно-черничное с цельными ягодами черники</p>
             </a>
-            <p class="price"><span class="price-number">410Р</span>/кг</p>
+            <p class="price">410Р<span class="price-weight">/кг</span></p>
           </li>
-          <li>
+          <li class="catalog-item">
             <a href="catalog-item.html">
               <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
               <p>Сливочно-лимонное с карамельной присыпкой</p>
             </a>
-            <p class="price"><span class="price-number">375Р</span>/кг</p>
+            <p class="price">375Р<span class="price-weight">/кг</span></p>
           </li>
-          <li>
+          <li class="catalog-item">
             <a href="catalog-item.html">
               <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
               <p>Сливочное с шоколадной стружкой</p>
             </a>
-            <p class="price"><span class="price-number">320Р</span>/кг</p>
+            <p class="price">320Р<span class="price-weight">/кг</span></p>
           </li>
-          <li>
+          <li class="catalog-item">
             <a href="catalog-item.html">
               <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
               <p>Сливочно-ванильное с кусочками шоколада</p>
             </a>
-            <p class="price"><span class="price-number">440Р</span>/кг</p>
+            <p class="price">440Р<span class="price-weight">/кг</span></p>
           </li>
-          <li>
+          <li class="catalog-item">
             <a href="catalog-item.html">
               <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
               <p>Сливочное с ментоловым сиропом</p>
             </a>
-            <p class="price"><span class="price-number">435Р</span>/кг</p>
+            <p class="price">435Р<span class="price-weight">/кг</span></p>
           </li>
-          <li>
+          <li class="catalog-item">
             <a href="catalog-item.html">
               <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
               <p>Сливочное с мятным сиропом</p>
             </a>
-            <p class="price"><span class="price-number">420Р</span>/кг</p>
+            <p class="price">420Р<span class="price-weight">/кг</span></p>
           </li>
         </ul>
       </section>
@@ -156,27 +166,23 @@
       </div>
     </footer>
 
-    <section class="modal modal-cart">
-      <ul>
-        <li>
-          <span class="modal-item-remove">X</span>
-          <img src="http://placehold.it/50x50" width="50" height="50" alt="Иконка товара">
-          <p>
-            Пломбир с апельсиновым джемом
-            1,5 кг х 200 руб.
-            300 руб.
-          </p>
-        </li>
-        <li>
-          <span class="modal-item-remove">X</span>
-          <img src="http://placehold.it/50x50" width="50" height="50" alt="Иконка товара">
-          <p>
-            Клубничный пломбир с присыпкой из белого шоколада
-            1,5 кг х 300 руб.
-            450 руб.
-          </p>
-        </li>
-      </ul>
+    <section class="modal modal-cart">  
+      <table>
+        <tr>
+          <td><span class="modal-item-remove">X</span></th>
+          <td><img src="http://placehold.it/50x50" width="50" height="50" alt="Иконка товара"></th>
+          <td>Пломбир с апельсиновым джемом</th>
+          <td>1,5 кг х 200 руб.</th>
+          <td>300 руб.</th>
+        </tr>
+        <tr>
+          <td><span class="modal-item-remove">X</span></td>
+          <td><img src="http://placehold.it/50x50" width="50" height="50" alt="Иконка товара"></td>
+          <td>Клубничный пломбир с присыпкой из белого шоколада</td>
+          <td>1,5 кг х 300 руб.</td>
+          <td>450 руб.</td>
+        </tr>
+      </table>
       <p><b>Итого: 750 руб.</b></p>
       <span class="order-button">Оформить заказ</span>
     </section>
