--- a/catalog_cream.html
+++ b/catalog_cream.html
@@ -12,13 +12,15 @@
         </a>
         <ul class="site-navigation">
           <li class="site-navigation-catalog">
-            Каталог
+            <a href="catalog.html">Каталог</a>
             <ul class="menu">
-              <li class="menu-title">Новинки</li>
-              <li><a href="catalog.html">Сливочное</a></li>
-              <li><a href="catalog.html">Щербеты</a></li>
-              <li><a href="catalog.html">Фруктовый лед</a></li>
-              <li><a href="catalog.html">Мелорин</a></li>
+              <li class="menu-title">
+                <a href="catalog-new html">Новинки</a>
+              </li>
+              <li><a href="catalog_cream.html">Сливочное</a></li>
+              <li><a href="catalog_scherbet.html">Щербеты</a></li>
+              <li><a href="catalog_ice.html">Фруктовый лед</a></li>
+              <li><a href="catalog_melorin.html">Мелорин</a></li>
             </ul>
           </li>
           <li><a href="price.html">Доставка и оплата</a></li>
