--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
   			<a><img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип магазина"></a>
   			<ul class="site-navigation">
   				<li class="site-navigation-catalog">
-  					Каталог
+  					<a href="catalog.html">Каталог</a>
   					<ul class="menu">
-  						<li class="menu-title">Новинки</li>
-  						<li><a href="catalog.html">Сливочное</a></li>
-  						<li><a href="catalog.html">Щербеты</a></li>
-  						<li><a href="catalog.html">Фруктовый лед</a></li>
-  						<li><a href="catalog.html">Мелорин</a></li>
+  						<li class="menu-title">
+  							<a href="catalog-new.html">Новинки</a>
+  						</li>
+  						<li><a href="catalog_cream.html">Сливочное</a></li>
+  						<li><a href="catalog_scherbet.html">Щербеты</a></li>
+  						<li><a href="catalog_ice.html">Фруктовый лед</a></li>
+  						<li><a href="catalog_melorin.html">Мелорин</a></li>
   					</ul>
   				</li>
   				<li><a href="price.html">Доставка и оплата</a></li>
