--- a/index.html
+++ b/index.html
@@ -155,7 +155,6 @@
 
   	<footer class="main-footer">
   		<div class="footer-social">
-  			<h2 class="visually-hidden">Социальные сети</h2>
   			<ul>
   				<li><a class="social-button" href="#"><img src="http://placehold.it/50x50" width="50" height="50" alt="Twitter">Twitter</a></li>
   				<li><a class="social-button" href="#"><img src="http://placehold.it/50x50" width="50" height="50" alt="Instagram">Instagram</a></li>
@@ -164,12 +163,14 @@
   			</ul>
   		</div>
 
-  		<ul class="footer-links">
-  			<li><a href="#">Для поставщиков</a></li>
-  			<li><a href="#">О производстве</a></li>
-  			<li><a href="#">Наши документы</a></li>
-  			<li><a href="#">Экологические стандарты</a></li>
-  		</ul>
+		<nav class="footer-links">
+  			<ul>
+  				<li><a href="#">Для поставщиков</a></li>
+  				<li><a href="#">О производстве</a></li>
+  				<li><a href="#">Наши документы</a></li>
+  				<li><a href="#">Экологические стандарты</a></li>
+  			</ul>
+  		</nav>
 
   		<div class="footer-copyright">
   			<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="http://placehold.it/150x100" width="150" height="100" alt="HTMLAcademy"></a>
