--- a/catalog_cream.html
+++ b/catalog_cream.html
@@ -57,77 +57,84 @@
         <ul class="catalog-list">
           <li class="catalog-item">
             <a href="catalog-item.html">
-              <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+              <img src="img/item_icons/1.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
             </a>
             <p class="price">310Р<span class="price-weight">/кг</span></p>
           </li>
           <li class="catalog-item">
             <a href="catalog-item.html">
-              <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+              <img src="img/item_icons/2.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочно-кофейное с кусочками шоколада</p>
             </a>
             <p class="price">380Р<span class="price-weight">/кг</span></p>
           </li>
           <li class="catalog-item">
             <a href="catalog-item.html">
-              <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+              <img src="img/item_icons/3.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
             </a>
             <p class="price">355Р<span class="price-weight">/кг</span></p>
           </li>
           <li class="catalog-item">
             <a href="catalog-item.html">
-              <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+              <img src="img/item_icons/4.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное крем-брюле с карамельной подливкой</p>
             </a>
             <p class="price">415Р<span class="price-weight">/кг</span></p>
           </li>
           <li class="catalog-item">
             <a href="catalog-item.html">
-              <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+              <img src="img/item_icons/5.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное с брусничным джемом</p>
             </a>
             <p class="price">325Р<span class="price-weight">/кг</span></p>
           </li>
           <li class="catalog-item">
             <a href="catalog-item.html">
-              <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+              <img src="img/item_icons/6.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочно-черничное с цельными ягодами черники</p>
             </a>
             <p class="price">410Р<span class="price-weight">/кг</span></p>
           </li>
           <li class="catalog-item">
             <a href="catalog-item.html">
-              <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+              <img src="img/item_icons/7.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочно-лимонное с карамельной присыпкой</p>
             </a>
             <p class="price">375Р<span class="price-weight">/кг</span></p>
           </li>
           <li class="catalog-item">
             <a href="catalog-item.html">
-              <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+              <img src="img/item_icons/8.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное с шоколадной стружкой</p>
             </a>
             <p class="price">320Р<span class="price-weight">/кг</span></p>
           </li>
           <li class="catalog-item">
             <a href="catalog-item.html">
-              <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+              <img src="img/item_icons/9.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочно-ванильное с кусочками шоколада</p>
             </a>
             <p class="price">440Р<span class="price-weight">/кг</span></p>
           </li>
           <li class="catalog-item">
             <a href="catalog-item.html">
-              <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+              <img src="img/item_icons/10.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное с ментоловым сиропом</p>
             </a>
             <p class="price">435Р<span class="price-weight">/кг</span></p>
           </li>
           <li class="catalog-item">
             <a href="catalog-item.html">
-              <img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+              <img src="img/item_icons/11.jpg" width="200" height="200" alt="Изображение товара">
+              <p>Сливочное с кусочками черного шоколада</p>
+            </a>
+            <p class="price">355Р<span class="price-weight">/кг</span></p>
+          </li>
+          <li class="catalog-item">
+            <a href="catalog-item.html">
+              <img src="img/item_icons/12.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное с мятным сиропом</p>
             </a>
             <p class="price">420Р<span class="price-weight">/кг</span></p>
@@ -173,14 +180,14 @@
       <table>
         <tr>
           <td><span class="modal-item-remove">X</span></th>
-          <td><img src="http://placehold.it/50x50" width="50" height="50" alt="Иконка товара"></th>
+          <td><img src="img/item_icons/1.jpg" width="33" height="33" alt="Иконка товара"></th>
           <td>Пломбир с апельсиновым джемом</th>
           <td>1,5 кг х 200 руб.</th>
           <td>300 руб.</th>
         </tr>
         <tr>
           <td><span class="modal-item-remove">X</span></td>
-          <td><img src="http://placehold.it/50x50" width="50" height="50" alt="Иконка товара"></td>
+          <td><img src="img/item_icons/3.jpg" width="33" height="33" alt="Иконка товара"></th></td>
           <td>Клубничный пломбир с присыпкой из белого шоколада</td>
           <td>1,5 кг х 300 руб.</td>
           <td>450 руб.</td>
