--- a/index.html
+++ b/index.html
@@ -77,28 +77,28 @@
   			<ul class="catalog-list">
   				<li class="catalog-item">
   					<a href="catalog-item.html">
-  						<img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+  						<img src="img/item_icons/1.jpg" width="200" height="200" alt="Изображение товара">
   						<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
   					</a>
   					<p class="price">310Р<span class="price-weight">/кг</span></p>
   				</li>
   				<li class="catalog-item">
   					<a href="catalog-item.html">
-  						<img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+  						<img src="img/item_icons/2.jpg" width="200" height="200" height="150" alt="Изображение товара">
   						<p>Сливочно-кофейное с кусочками шоколада</p>
   					</a>
   					<p class="price">380Р<span class="price-weight">/кг</span></p>
   				</li>
   				<li class="catalog-item">
   					<a href="catalog-item.html">
-  						<img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+  						<img src="img/item_icons/3.jpg" width="200" height="200" alt="Изображение товара">
   						<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
   					</a>
   					<p class="price">355Р<span class="price-weight">/кг</span></p>
   				</li>
   				<li class="catalog-item">
   					<a href="catalog-item.html">
-  						<img src="http://placehold.it/150x150" width="150" height="150" alt="Изображение товара">
+  						<img src="img/item_icons/4.jpg" width="200" height="200" alt="Изображение товара">
   						<p>Сливочное крем-брюле с карамельной подливкой</p>
   					</a>
   					<p class="price">415Р<span class="price-weight">/кг</span></p>
