Внедрение векторных изображений

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
   	<header class="main-header">
   		<nav class="main-navigation">
-  			<a><img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип магазина"></a>
+  			<a><img src="img/logo.svg" width="154" height="64" alt="Логотип магазина"></a>
   			<ul class="site-navigation">
   				<li class="site-navigation-catalog">
   					<a href="catalog.html">Каталог</a>
@@ -156,10 +156,10 @@
   	<footer class="main-footer">
   		<div class="footer-social">
   			<ul>
-  				<li><a class="social-button" href="#"><img src="http://placehold.it/50x50" width="50" height="50" alt="Twitter">Twitter</a></li>
-  				<li><a class="social-button" href="#"><img src="http://placehold.it/50x50" width="50" height="50" alt="Instagram">Instagram</a></li>
-  				<li><a class="social-button" href="#"><img src="http://placehold.it/50x50" width="50" height="50" alt="Facebook">Facebook</a></li>
-  				<li><a class="social-button" href="#"><img src="http://placehold.it/50x50" width="50" height="50" alt="VK">VK</a></li>
+  				<li><a class="social-button" href="#"><img src="img/twitter.svg" width="32" height="32" alt="Twitter">Twitter</a></li>
+  				<li><a class="social-button" href="#"><img src="img/instagram.svg" width="32" height="32" alt="Instagram">Instagram</a></li>
+  				<li><a class="social-button" href="#"><img src="img/facebook.svg" width="32" height="32" alt="Facebook">Facebook</a></li>
+  				<li><a class="social-button" href="#"><img src="img/vk.svg" width="32" height="32" alt="VK">VK</a></li>
   			</ul>
   		</div>
 
@@ -173,7 +173,7 @@
   		</nav>
 
   		<div class="footer-copyright">
-  			<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="http://placehold.it/150x100" width="150" height="100" alt="HTMLAcademy"></a>
+  			<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy.svg" width="108" height="39" alt="HTMLAcademy"></a>
   			<p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
   		</div>
   	</footer>
